@@ -15,6 +15,8 @@ Version 0.6-24
 	* summary.predict.mat: print method was incorrectly extracting
 	the model estimates for training set samples.
 
+	* predict.wa: fix minor bug with CV when tolerance DW was used.
+	
 	* Package: reduced package check time in examples, by using
 	the Imbrie & Kipp data.
 
